--- a/S4NClient/WebContent/CreateNewAccount.html
+++ b/S4NClient/WebContent/CreateNewAccount.html
@@ -11,6 +11,7 @@
 		<p>Input something in the input box:</p>
 		<p>Name: <input type="text" ng-model="name"></p>
 		<p ng-bind="name"></p>
+		<p>Cool</p>
 
 	</div>
 	
