Updated router and menutemplateheader

--- a/S4NClient/MenuTemplateHeader.html
+++ b/S4NClient/MenuTemplateHeader.html
@@ -17,11 +17,11 @@
     <div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a ui-sref="contactus">Contact Us</a></li>
-        <li><a ui-sref="aboutus">About Us</a></li>
-        <li><a ui-sref="winners">Winners</a></li>
-        <li><a ui-sref="advertisers">Advertisers</a></li>
-        <li><a ui-sref="faq">FAQ</a></li>
+        <li><a ui-sref="home.contactus">Contact Us</a></li>
+        <li><a ui-sref="home.aboutus">About Us</a></li>
+        <li><a ui-sref="home.winners">Winners</a></li>
+        <li><a ui-sref="home.advertisers">Advertisers</a></li>
+        <li><a ui-sref="home.faq">FAQ</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a ui-sref="createnewaccount"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
